correcao de bugs